--- a/article2.html
+++ b/article2.html
@@ -8,6 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Danfo&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,26 +27,60 @@
         <section class="content">
             <h2>Награды</h2>
             <p>Награды:</p>
-            <ul>
-                <li><a href="#1s">Медаль Джона фон Неймана</a></li>
-                <li><a href="#2s">Действительный член ACM</a></li>
-                <li><a href="#3s">ACM Software System</a></li>
-                <li><a href="#4s">Tsutomu Kanai Award</a></li>
+            <ul>    <table class="table-example">
+                <caption>Введение</caption>
+                <thead>
+                    <tr>
+                        <th>Название</th>
+                        <th>Что-то</th>
+                        <th>Что-то</th>
+                        <th>Что-то</th>
+                    </tr>
+                    
+                </thead>
+                
+                <tbody>
+                    <tr>
+                        <td><li><a href="#1s">Медаль Джона фон Неймана</a></li></td>
+                        <td>хи</td>
+                        <td>хи</td>
+                        <td>хи</td>
+                    </tr>
+                    <tr>
+                        <td><li><a href="#2s">Действительный член ACM</a></li></td>
+                        <td>хи</td>
+                        <td>хи</td>
+                        <td>хи</td>
+                    </tr>
+                    <tr>
+                        <td><li><a href="#3s">ACM Software System</a></li></td>
+                        <td>хи</td>
+                        <td>хи</td>
+                        <td>хи</td>
+                    </tr>
+                    <tr>
+                        <td><li><a href="#4s">Tsutomu Kanai Award</a></li></td>
+                        <td>хи</td>
+                        <td>хи</td>
+                        <td>хи</td>
+                    </tr>
+                </tbody>
+            </table>
             </ul><br>
             <p>
-                <strong id="1s">Медаль Джона фон Неймана</strong> — награда в области информационных технологий, учреждённая советом директоров IEEE в 1990 году. Вручается ежегодно с 1992 года за выдающиеся теоретические, технологические и деловые достижения. Учитываются не только новые достижения, но значительные результаты прошлых лет. <del>Существует предположение что ему её так и не выдали.</del>
+                <strong class="ye" id="1s">Медаль Джона фон Неймана</strong> — награда в области информационных технологий, учреждённая советом директоров IEEE в 1990 году. Вручается ежегодно с 1992 года за выдающиеся теоретические, технологические и деловые достижения. Учитываются не только новые достижения, но значительные результаты прошлых лет. <del>Существует предположение что ему её так и не выдали.</del>
             </p>
             <p><img class="k1" src="img/IEEE_John_von_Neumann_Medal.png" alt="medalka"></p>
             <p>
-                <strong id="2s">Действительный член ACM</strong> — почётное звание (фелло), пожизненно присуждаемое выдающимся членам Ассоциации вычислительной техники (ACM). Не более 1 % членов ACM могут быть избраны в качестве действительных членов.
+                <strong class="yee" id="2s">Действительный член ACM</strong> — почётное звание (фелло), пожизненно присуждаемое выдающимся членам Ассоциации вычислительной техники (ACM). Не более 1 % членов ACM могут быть избраны в качестве действительных членов.
             </p>
             <p><img class="k2" src="img/acm-fellows-member-badge.jpg" alt="acm member"></p>
             <p>
-                <strong id="3s">ACM Software System</strong> - присуждается учреждению или физическому лицу, получившему признание за разработку системы программного обеспечения, оказавшей длительное влияние, отраженное в вкладе в концепции, коммерческом принятии или в том и другом.
+                <strong class="yeee" id="3s">ACM Software System</strong> - присуждается учреждению или физическому лицу, получившему признание за разработку системы программного обеспечения, оказавшей длительное влияние, отраженное в вкладе в концепции, коммерческом принятии или в том и другом.
             </p>
             <p><img class="k3" src="img/ACM_2005_Software_System_Award.jpg" alt="mega medal"></p>
             <p>
-                <strong id="4s">Tsutomu Kanai Award</strong> - может быть вручена ежегодно по рекомендации подкомитета премии Канаи, одобрению Комитета по наградам и утверждению Совета управляющих. Премия Канаи присуждается за значительный вклад в современные распределенные вычислительные системы и их приложения. 
+                <strong class="yeeee" id="4s">Tsutomu Kanai Award</strong> - может быть вручена ежегодно по рекомендации подкомитета премии Канаи, одобрению Комитета по наградам и утверждению Совета управляющих. Премия Канаи присуждается за значительный вклад в современные распределенные вычислительные системы и их приложения. 
             </p>
             <p><img class="k4" src="img/SutomuKanaiAward.jpg" alt="medal"></p>
         </section>
