--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Danfo&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/ico" sizes="32x32" href="icons/favicon.ico">
+    <link rel="icon" type="image/ico" sizes="16x16" href="icons/favicon.ico">
+    <link rel="shortcut icon" href="icons/favicon.ico">
+    <meta property="og:title" content="мегасайт">
+    <meta property="og:site_name" content="сайт КРУТО">
+    <meta property="og:url" content="https://aquuee.github.io/kruto/">
+    <meta property="og:description" content="сайт - бдщ">
+    <meta property="og:image" content="https://aquuee.github.io/kruto/img/Гослинг.jpg">
+
+
 </head>
 <body>
     <header>
