--- a/article1.html
+++ b/article1.html
@@ -11,14 +11,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Danfo&display=swap" rel="stylesheet">
+<link rel="icon" type="image/ico" sizes="32x32" href="icons/favicon.ico">
+<link rel="icon" type="image/ico" sizes="16x16" href="icons/favicon.ico">
+<link rel="shortcut icon" href="icons/favicon.ico">
 </head>
 <body>
     <header>
-        <h1>Личный сайт</h1>
-        <img src="img/building-columns-solid.svg" alt="логотип" width="34px">
+        <div class="logo">
+            <img src="img/building-columns-solid.svg" alt="логотип" width="34px">
+        </div>
+        <h1>Джеймс Гослинг</h1>
         <nav>
             <ul>
                 <li> <a href="index.html">Главная</a></li>
+                <li><a href="article2.html">Награды</a></li>
+                <li><a href="article3.html">Публикации</a></li>
+                <li><a href="article4.html">Биография</a></li>
             </ul>
         </nav>
     </header>   
@@ -55,12 +63,10 @@
                 Решено было, что имеющиеся наработки хорошо подойдут для телеприставок, и до 1994-го эту идею предлагали кабельным компаниям вроде Time Warner. Но переговоры с ними не завершились успехом (из 2020-го кажется, что идея просто обогнала своё время: эпоха умных телеприставок пришла позже). Поэтому весь проект оказался под угрозой закрытия.
 
                 Пока шли переговоры с компаниями, работа над языком продолжалась. Можно посмотреть, например, спецификацию Oak 0.2 и умилиться «детским шагам» («юникод пока нельзя, enum тоже ещё не имплементирован, но всё будет»). Но в 1994-м после жалобы от другой компании, владеющей правами на название Oak, его пришлось переименовать. Тогда и возникло название Java, но затруднительно сказать, кто его автор..
-                <p>
-                    <q>
-                        <blockquote>«Название появилось на совещании, где около дюжины человек брейнштормили вместе. (...) По сути, совещание было продолжительным диким безумием. Много людей кричало много слов. Кто именно что крикнул — не установить, да и не имеет значения. По ощущениям, там было выкрикнуто большинство слов из словаря. Было много фраз "мне нравится, потому что..." и "мне не нравится, потому что...", и в конце мы сделали список примерно из дюжины названий. Передали его юристам, чтобы они выбрали ближайший к вершине списка вариант, подходящий для регистрации торговой марки. Вариант "Java" был третьим-четвёртым сверху»
-                        <cite>Джеймс Гослинг</cite></blockquote>
-                    </q>
-                </p>
+                <q>
+                    <blockquote>«Название появилось на совещании, где около дюжины человек брейнштормили вместе. (...) По сути, совещание было продолжительным диким безумием. Много людей кричало много слов. Кто именно что крикнул — не установить, да и не имеет значения. По ощущениям, там было выкрикнуто большинство слов из словаря. Было много фраз "мне нравится, потому что..." и "мне не нравится, потому что...", и в конце мы сделали список примерно из дюжины названий. Передали его юристам, чтобы они выбрали ближайший к вершине списка вариант, подходящий для регистрации торговой марки. Вариант "Java" был третьим-четвёртым сверху»
+                    <cite>Джеймс Гослинг</cite></blockquote>
+                </q>
             </p>
         </section>
     </main> 
