--- a/article2.html
+++ b/article2.html
@@ -8,78 +8,84 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Danfo&display=swap" rel="stylesheet">
+<link rel="icon" type="image/ico" sizes="32x32" href="icons/favicon.ico">
+<link rel="icon" type="image/ico" sizes="16x16" href="icons/favicon.ico">
+<link rel="shortcut icon" href="icons/favicon.ico">
 </head>
 <body>
     <header>
-        <h1>Личный сайт</h1>
-        <img src="img/building-columns-solid.svg" alt="логотип" width="34px">
+        <div class="logo">
+            <img src="img/building-columns-solid.svg" alt="логотип" width="34px">
+        </div>
+        <h1>Джеймс Гослинг</h1>
         <nav>
             <ul>
                 <li> <a href="index.html">Главная</a></li>
+                <li><a href="article1.html">Крупнейший проект</a></li>
+                <li><a href="article3.html">Публикации</a></li>
+                <li><a href="article4.html">Биография</a></li>
             </ul>
         </nav>
     </header>   
     <main>
-        <section class="content">
-            <h2>Награды</h2>
-            <p>Награды:</p>
-            <ul>    <table class="table-example">
-                <caption>Введение</caption>
-                <thead>
-                    <tr>
-                        <th>Название</th>
-                        <th>Что-то</th>
-                        <th>Что-то</th>
-                        <th>Что-то</th>
-                    </tr>
-                    
-                </thead>
-                
-                <tbody>
-                    <tr>
-                        <td><li><a href="#1s">Медаль Джона фон Неймана</a></li></td>
-                        <td>хи</td>
-                        <td>хи</td>
-                        <td>хи</td>
-                    </tr>
-                    <tr>
-                        <td><li><a href="#2s">Действительный член ACM</a></li></td>
-                        <td>хи</td>
-                        <td>хи</td>
-                        <td>хи</td>
-                    </tr>
-                    <tr>
-                        <td><li><a href="#3s">ACM Software System</a></li></td>
-                        <td>хи</td>
-                        <td>хи</td>
-                        <td>хи</td>
-                    </tr>
-                    <tr>
-                        <td><li><a href="#4s">Tsutomu Kanai Award</a></li></td>
-                        <td>хи</td>
-                        <td>хи</td>
-                        <td>хи</td>
-                    </tr>
-                </tbody>
+        <section>
+            <table>
+                <caption>Награды Гослинга</caption>
+                <tr>
+                    <th>Название награды</th>
+                    <th>Небольшое описание</th>
+                    <th>Кол-во(шт)</th>
+                    <th>Пустота :)</th>
+                </tr>
+                <tr>
+                    <td><li><a href="#1s">Медаль Джона фон Неймана</a></li></td>
+                    <td>Награда в области информационных технологий</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><li><a href="#2s">Действительный член ACM</a></li></td>
+                    <td>Почётное звание , пожизненно присуждаемое выдающимся членам Ассоциации вычислительной техники</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><li><a href="#3s">ACM Software System</a></li></td>
+                    <td>Признание за разработку системы программного обеспечения, оказавшей длительное влияние, отраженное в вкладе в концепции, коммерческом принятии или в том и другом.</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><li><a href="#4s">Tsutomu Kanai Award</a></li></td>
+                    <td>Премия Канаи присуждается за значительный вклад в современные распределенные вычислительные системы и их приложения.</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Больше нет:с</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
             </table>
-            </ul><br>
-            <p>
+        </section>
+        <section>
+            <p class="W">
                 <strong class="ye" id="1s">Медаль Джона фон Неймана</strong> — награда в области информационных технологий, учреждённая советом директоров IEEE в 1990 году. Вручается ежегодно с 1992 года за выдающиеся теоретические, технологические и деловые достижения. Учитываются не только новые достижения, но значительные результаты прошлых лет. <del>Существует предположение что ему её так и не выдали.</del>
             </p>
             <p><img class="k1" src="img/IEEE_John_von_Neumann_Medal.png" alt="medalka"></p>
-            <p>
+            <p class="W">
                 <strong class="yee" id="2s">Действительный член ACM</strong> — почётное звание (фелло), пожизненно присуждаемое выдающимся членам Ассоциации вычислительной техники (ACM). Не более 1 % членов ACM могут быть избраны в качестве действительных членов.
             </p>
             <p><img class="k2" src="img/acm-fellows-member-badge.jpg" alt="acm member"></p>
-            <p>
+            <p class="W">
                 <strong class="yeee" id="3s">ACM Software System</strong> - присуждается учреждению или физическому лицу, получившему признание за разработку системы программного обеспечения, оказавшей длительное влияние, отраженное в вкладе в концепции, коммерческом принятии или в том и другом.
             </p>
             <p><img class="k3" src="img/ACM_2005_Software_System_Award.jpg" alt="mega medal"></p>
-            <p>
+            <p class="W">
                 <strong class="yeeee" id="4s">Tsutomu Kanai Award</strong> - может быть вручена ежегодно по рекомендации подкомитета премии Канаи, одобрению Комитета по наградам и утверждению Совета управляющих. Премия Канаи присуждается за значительный вклад в современные распределенные вычислительные системы и их приложения. 
             </p>
             <p><img class="k4" src="img/SutomuKanaiAward.jpg" alt="medal"></p>
