--- a/article4.html
+++ b/article4.html
@@ -11,14 +11,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Danfo&display=swap" rel="stylesheet">
+<link rel="icon" type="image/ico" sizes="32x32" href="icons/favicon.ico">
+<link rel="icon" type="image/ico" sizes="16x16" href="icons/favicon.ico">
+<link rel="shortcut icon" href="icons/favicon.ico">
 </head>
 <body>
     <header>
-        <h1>Личный сайт</h1>
-        <img src="img/building-columns-solid.svg" alt="логотип" width="34px">
+        <div class="logo">
+            <img src="img/building-columns-solid.svg" alt="логотип" width="34px">
+        </div>
+        <h1>Джеймс Гослинг</h1>
         <nav>
             <ul>
                 <li> <a href="index.html">Главная</a></li>
+                <li><a href="article1.html">Крупнейший проект</a></li>
+                <li><a href="article2.html">Награды</a></li>
+                <li><a href="article3.html">Публикации</a></li>
             </ul>
         </nav>
     </header>   
