--- a/index.html
+++ b/index.html
@@ -15,32 +15,31 @@
     <link rel="icon" type="image/ico" sizes="32x32" href="icons/favicon.ico">
     <link rel="icon" type="image/ico" sizes="16x16" href="icons/favicon.ico">
     <link rel="shortcut icon" href="icons/favicon.ico">
-    <meta property="og:title" content="мегасайт">
-    <meta property="og:site_name" content="сайт КРУТО">
+    <meta property="og:title" content="Крутой чел, можно глянуть">
+    <meta property="og:site_name" content="Джеймс Гослинг">
     <meta property="og:url" content="https://aquuee.github.io/kruto/">
-    <meta property="og:description" content="сайт - бдщ">
+    <meta property="og:description" content="Информация о Джеймсе Гогогого">
     <meta property="og:image" content="https://aquuee.github.io/kruto/img/Гослинг.jpg">
 
 
 </head>
-<body>
+<body>  
     <header>
+        <div class="logo">
+            <img src="img/building-columns-solid.svg" alt="логотип" width="34px">
+        </div>
         <h1>Джеймс Гослинг</h1>
-        <img src="img/building-columns-solid.svg" alt="логотип" width="34px">
         <nav>
             <ul>
-                <li> <a href="#about">Он крут</a></li>
-            </ul>
-            <ul>
-                <li> <a href="#articles">Статьи</a></li>
+                <li><a href="#about">Он крут</a></li>
+                <li><a href="#articles">Статьи</a></li>
+                <li><a href="obratniSvyaz.html">Обратная связь</a></li>
             </ul>
         </nav>
     </header>   
     <main>
         <section class="about" id="about">
-            <h2>    
-                Джеймс Гослинг(69 лет)
-            </h2>
+            <h2>Основная информация</h2>
             <a href="img/Джеймс2.jpg" download>
             <img class="avatar" src="img/Джеймс2.jpg" alt="red">
             </a>
@@ -56,14 +55,18 @@
         </section>
         <section class="articles" id="articles">
             <h2>Статьи</h2>
-            <ol start="1" class="page-list">
+            <ul>
                 <li><a href="article1.html">Крупнейший проект</a></li>
                 <li><a href="article2.html">Награды</a></li>
                 <li><a href="article3.html">Публикации</a></li>
                 <li><a href="article4.html">Биография</a></li>
-            </ol>
+            </ul>
+        </section>
+        <section class="obratniSvyaz">
+            <a href="obratniSvyaz.html">Обратная связь</a>
         </section>
     </main> 
+
     <footer>
         <p>Источники:</p>
         <p><a href="https://ru.wikipedia.org/wiki/%D0%93%D0%BE%D1%81%D0%BB%D0%B8%D0%BD%D0%B3,_%D0%94%D0%B6%D0%B5%D0%B9%D0%BC%D1%81" target="_blank"><img class="KRUTO" src="img/Без названия.webp" alt="wiki"></a></p>
@@ -72,5 +75,6 @@
         <a href="">+75252525252</a>
         <a href="">megabobik2007@gmail.com</a>
     </footer>
+
 </body>
-</html>
+</html> 
